<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, todolistActivity!</string>
    <string name="app_name">Administrador de Tareas</string>
    <string name="stvtitulo">Titulo</string>
    <string name="stvdescripcion">Descripcion</string>
    <string name="stvprioridad">Prioridad:</string>
    <string name="stvfechainicio">Fecha Inicio:</string>
    <string name="strfechafin">Fecha fin:</string>
    <string name="stbnaceptar">Aceptar</string>
    
    <string-array name="prioridades">
        <item >Alta</item>
        <item >Media</item>
        <item >Baja</item>
    </string-array>
        <string name="stvbtnCancelar">Cancelar</string>
<color name="listcolor">#94A65D</color>
	<color name="black">#fff</color>
</resources>