<?xml version="1.0" encoding="utf-8"?>
<ScrollView
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lblTitulo"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/stvtitulo"/>

        <EditText
            android:id="@+id/ettitulo"
            android:layout_width="220dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lbldescripcion"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/stvdescripcion"/>

        <EditText
            android:id="@+id/etdescripcion"
            android:layout_width="220dp"
            android:layout_height="127dp"
            android:layout_weight="0.27"
            android:inputType="textMultiLine" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lblprioridad"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stvprioridad" />

        <Spinner
            android:id="@+id/spprioridad"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:entries="@array/prioridades" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lblinicio"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/stvfechainicio" />

        <DatePicker
            android:id="@+id/dpFechaInicio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lblfin"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/strfechafin" />

        <DatePicker
            android:id="@+id/dpFechaFin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>



     <LinearLayout
         android:id="@+id/linearLayout7"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent" >

         <Button
             android:id="@+id/btnAceptar"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:onClick="guardar"
             android:text="@string/stbnaceptar" android:layout_marginRight="50dp" android:layout_marginLeft="50dp"/>

         <Button
             android:id="@+id/btnCancelar"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:onClick="finalizartask"
             android:text="@string/stvbtnCancelar" android:layout_marginRight="50dp"/>

    

 </LinearLayout>

</LinearLayout>
</ScrollView>